--- a/_toc.yml
+++ b/_toc.yml
@@ -23,6 +23,7 @@ parts:
       - file: notes/2023-09-21
       - file: notes/2023-09-26
       - file: notes/2023-09-28
+      - file: notes/2023-10-03
   - caption: Activities
     chapters:
     - file: activities/kwl
@@ -37,6 +38,7 @@ parts:
     chapters:
     - file: faq/syllabus
     - file: faq/github
+    - file: faq/tools
   - caption: Resources
     chapters:
     - file: resources/glossary
